<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">个性化新闻</string>
    <string name="loadmore_btn">加载更多</string>
    <string name="loadmore_txt">正在加载，请稍候...</string>
    <string name="no_news">该栏目下暂时没有新闻</string>
    <string name="no_more_news">该栏目下没有更多新闻</string>
    <string name="load_news_failure">获取新闻失败</string>
    <string name="no_next_news">没有下篇新闻了</string>
    <string name="no_pre_news">没有上篇新闻了</string>
    <string name="post_success">回复成功</string>
    <string name="post_failure">回复失败</string>
    <string name="no_comments">暂时没有回复</string>
    <string name="get_comms_failure">获取回复失败</string>
    <string name="menu_item_update">更新</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
        
     <string name="crong_investment_assistant">个性化新闻APP</string>
    <string name="version">1.1.0</string>
    <string name="login_pw">登录密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="savedAccount">记住账号</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="number">会员账号</string>
    
        
   	<string name="drawer_btn_rss">频道管理</string>
	<string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    
   <string name="getNews">新闻</string>
    <string name="message">消息</string>
    <string name="found">发现</string>
    <string name="me">我的</string>
</resources>
